--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -17,6 +17,10 @@
   z-index: 99;
 }
 
+#modal-2 .modal__overlay {
+   z-index: 100;
+}
+
 .modal__container {
   background-color: #fff;
   padding: 30px;
@@ -161,7 +165,7 @@
   display: none;
 }
 
-.micromodal-slide.is-open {
+.micromodal-slide.is-open{
   display: block;
 }
 
