--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -1,5 +1,5 @@
 #modal-1.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1')
+	.modal__overlay(tabindex='-1' data-custom-close="modal-1")
 		.modal__wrapper.my-modal-wrapper
 			.modal__container.work-modal.my-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
 				span.modal__close(data-custom-close="modal-1")
@@ -191,10 +191,15 @@
 					#create-vacancy.create-vacancy.my-modal-part
 						p
 							|Создать вакансию
+
+
+
+
+
 #modal-2.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1')
+	.modal__overlay(tabindex='-1' data-contact-history-close="modal-2")
 		.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
-			span.modal__close(data-custom-close="modal-2")
+			span.modal__close(data-contact-history-close="modal-2")
 					span
 					span
 			.contact-history-modal__header
