--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -17,9 +17,17 @@
   z-index: 99;
 }
 
-#modal-2 .modal__overlay {
-   z-index: 100;
+#modal-2 {
+  .modal__overlay {
+     z-index: 100;
+  }
+
+  .modal__container {
+    overflow-y: initial;
+  }
 }
+
+
 
 .modal__container {
   background-color: #fff;
