--- a/app/pug/layouts/sidebar.pug
+++ b/app/pug/layouts/sidebar.pug
@@ -34,11 +34,11 @@
 		.sidebar__filters
 			.sidebar__input-wrapper
 				
-				input.sidebar__search-input(type="text" placeholder="поиск")
-				i.search-icon
-					svg
-						use(xlink:href='img/sprites/svg/symbol/sprite.svg#search')
-				i.remove-icon.hidden
+				//- input.sidebar__search-input(type="text" placeholder="поиск")
+				//- i.search-icon
+				//- 	svg
+				//- 		use(xlink:href='img/sprites/svg/symbol/sprite.svg#search')
+				//- i.remove-icon.hidden
 			ul.sidebar__filter
 				li.sidebar__filter-item.sidebar__li
 					.sidebar__filter-wrapper.country-filter-wrapper
