--- a/app/less/_sidebar.less
+++ b/app/less/_sidebar.less
@@ -268,6 +268,14 @@
 // }
 
 .sidebar__input-wrapper {
+	.sidebar__input-layer {
+		opacity: 1;
+		transition: opacity .25s linear;
+		&.hidden {
+			opacity: 0;
+		}
+	}
+	height: 	26px;
 	position: relative;
 	max-width: 172px;
 	width: 100%;
