--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -71,31 +71,31 @@
 				//- 		label(for="horses-chbx")
 				//- 			|лошади
 		#contact-popup.sidebar-popup
-			form
-				.input-group
-					input(type="checkbox" id="phone-chbx")
-					label(for="phone-chbx")
-						|Телефон
-				.input-group
-					input(type="checkbox" id="email-chbx")
-					label(for="email-chbx")
-						|E-mail
-				.input-group
-					input(type="checkbox" id="mail-address-chbx") 
-					label(for="mail-address-chbx")
-						|Почтовый адрес
-				.input-group
-					input(type="checkbox" id="site-chbx")
-					label(for="site-chbx")
-						|Сайт
-				.input-group
-					input(type="checkbox" id="facebook-chbx")
-					label(for="facebook-chbx")
-						|Facebook
-				.input-group
-					input(type="checkbox" id="instagram-chbx")
-					label(for="instagram-chbx")
-						|Instagram
+			//- form
+				//- .input-group
+				//- 	input(type="checkbox" id="phone-chbx")
+				//- 	label(for="phone-chbx")
+				//- 		|Телефон
+				//- .input-group
+				//- 	input(type="checkbox" id="email-chbx")
+				//- 	label(for="email-chbx")
+				//- 		|E-mail
+				//- .input-group
+				//- 	input(type="checkbox" id="mail-address-chbx") 
+				//- 	label(for="mail-address-chbx")
+				//- 		|Почтовый адрес
+				//- .input-group
+				//- 	input(type="checkbox" id="site-chbx")
+				//- 	label(for="site-chbx")
+				//- 		|Сайт
+				//- .input-group
+				//- 	input(type="checkbox" id="facebook-chbx")
+				//- 	label(for="facebook-chbx")
+				//- 		|Facebook
+				//- .input-group
+				//- 	input(type="checkbox" id="instagram-chbx")
+				//- 	label(for="instagram-chbx")
+				//- 		|Instagram
 		#last-contact-popup.sidebar-popup
 			form
 				.input-group
