--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -240,3 +240,15 @@
     }
     
 }
+
+
+#vacancies-popup {
+    .radio-group-type-2 {
+        .input-group {
+            width: auto;
+            &:not(:last-child) {
+                margin-right: 10px;
+            }
+        }
+    }
+}
