--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -97,23 +97,23 @@
 				//- 	label(for="instagram-chbx")
 				//- 		|Instagram
 		#last-contact-popup.sidebar-popup
-			form
-				.input-group
-					input(type="radio" id="1-month-rbtn" name="last-contact-rbtn")
-					label(for="1-month-rbtn")
-						|более 1 мес назад
-				.input-group
-					input(type="radio" id="3-month-rbtn" name="last-contact-rbtn")
-					label(for="3-month-rbtn")
-						|более 3 мес назад
-				.input-group
-					input(type="radio" id="6-month-rbtn" name="last-contact-rbtn") 
-					label(for="6-month-rbtn")
-						|более 6 мес назад
-				.input-group
-					input(type="radio" id="never-rbtn" name="last-contact-rbtn")
-					label(for="never-rbtn")
-						|никогда
+			//- form
+			//- 	.input-group
+			//- 		input(type="radio" id="1-month-rbtn" name="last-contact-rbtn")
+			//- 		label(for="1-month-rbtn")
+			//- 			|более 1 мес назад
+			//- 	.input-group
+			//- 		input(type="radio" id="3-month-rbtn" name="last-contact-rbtn")
+			//- 		label(for="3-month-rbtn")
+			//- 			|более 3 мес назад
+			//- 	.input-group
+			//- 		input(type="radio" id="6-month-rbtn" name="last-contact-rbtn") 
+			//- 		label(for="6-month-rbtn")
+			//- 			|более 6 мес назад
+			//- 	.input-group
+			//- 		input(type="radio" id="never-rbtn" name="last-contact-rbtn")
+			//- 		label(for="never-rbtn")
+			//- 			|никогда
 		#managers-popup.sidebar-popup
 			//- form
 			//- 	.input-group
@@ -151,64 +151,72 @@
 			//- 			|Янина
 		#vacancies-popup.sidebar-popup
 			form
-				fieldset
-					.input-group
-						input(type="checkbox" id="Earlier-chbx")
-						label(for="Earlier-chbx")
-							|Ранее предоставляли вакансии
-				fieldset
-					p
-						|Тип вакансии
-					.input-group.radio-group-type-2
-						.group
-							input(type="checkbox" id="season-chbx" name="vacancies-chbx" checked="true")
-							label(for="season-chbx")
-								|Сезонная
-							input(type="checkbox" id="practice-chbx" name="vacancies-chbx")
-							label(for="practice-chbx")
-								|Практика
-							input(type="checkbox" id="work-chbx" name="vacancies-chbx")
-							label(for="work-chbx")
-								|Рабочая
-				fieldset
-					p
-						|Срок вакансии
-					.input-group.radio-group-type-2.yellow
-						.group
-							input(type="checkbox" id="3mnth-chbx" name="vacancies-chbx-2" checked="true")
-							label(for="3mnth-chbx")
-								|до 3 мес
-							input(type="checkbox" id="3-6mnth-chbx" name="vacancies-chbx-2")
-							label(for="3-6mnth-chbx")
-								|3 - 6 мес
-							input(type="checkbox" id="6-9mnth-chbx" name="vacancies-chbx-2")
-							label(for="6-9mnth-chbx")
-								|6 - 9 мес
-						.group
-							input(type="checkbox" id="9-12mnth-chbx" name="vacancies-chbx-2")
-							label(for="9-12mnth-chbx")
-								|9 - 12 мес
-							input(type="checkbox" id="12mnth-chbx" name="vacancies-chbxn-2")
-							label(for="12mnth-chbx")
-								|12 +
+				//- fieldset
+				//- 	.input-group
+				//- 		input(type="checkbox" id="Earlier-chbx")
+				//- 		label(for="Earlier-chbx")
+				//- 			|Ранее предоставляли вакансии
+				//- fieldset
+				//- 	p
+				//- 		|Тип вакансии
+				//- 	.input-group.radio-group-type-2
+				//- 		.group
+				//- 			.input-group
+				//- 				input(type="checkbox" id="season-chbx" name="vacancies-chbx" checked="true")
+				//- 				label(for="season-chbx")
+				//- 					|Сезонная
+				//- 			.input-group
+				//- 				input(type="checkbox" id="practice-chbx" name="vacancies-chbx")
+				//- 				label(for="practice-chbx")
+				//- 					|Практика
+				//- 			.input-group
+				//- 				input(type="checkbox" id="work-chbx" name="vacancies-chbx")
+				//- 				label(for="work-chbx")
+				//- 					|Рабочая
+				//- fieldset
+				//- 	p
+				//- 		|Срок вакансии
+				//- 	.input-group.radio-group-type-2.yellow
+				//- 		.group
+				//- 			.input-group
+				//- 				input(type="checkbox" id="3mnth-chbx" name="vacancies-chbx-2" checked="true")
+				//- 				label(for="3mnth-chbx")
+				//- 					|до 3 мес
+				//- 			.input-group
+				//- 				input(type="checkbox" id="3-6mnth-chbx" name="vacancies-chbx-2")
+				//- 				label(for="3-6mnth-chbx")
+				//- 					|3 - 6 мес
+				//- 			.input-group
+				//- 				input(type="checkbox" id="6-9mnth-chbx" name="vacancies-chbx-2")
+				//- 				label(for="6-9mnth-chbx")
+				//- 					|6 - 9 мес
+				//- 		.group
+				//- 			.input-group
+				//- 				input(type="checkbox" id="9-12mnth-chbx" name="vacancies-chbx-2")
+				//- 				label(for="9-12mnth-chbx")
+				//- 					|9 - 12 мес
+				//- 			.input-group
+				//- 				input(type="checkbox" id="12mnth-chbx" name="vacancies-chbxn-2")
+				//- 				label(for="12mnth-chbx")
+				//- 					|12 +
 		#sorting-popup.sidebar-popup
-			form
-				.input-group
-					input(type="radio" id="date-rbtn" name="sorting-rbtn")
-					label(for="date-rbtn")
-						|По внесению
-				.input-group
-					input(type="radio" id='name-rbtn' name="sorting-rbtn")
-					label(for="name-rbtn")
-						|По имени
-				.input-group
-					input(type="radio" id='contacts-rbtn' name="sorting-rbtn")
-					label(for="contacts-rbtn")
-						|По контактам
-				.input-group
-					input(type="radio" id='vacancies-rbtn' name="sorting-rbtn")
-					label(for="vacancies-rbtn")
-						|По вакансиям
+			//- form
+			//- 	.input-group
+			//- 		input(type="radio" id="date-rbtn" name="sorting-rbtn")
+			//- 		label(for="date-rbtn")
+			//- 			|По внесению
+			//- 	.input-group
+			//- 		input(type="radio" id='name-rbtn' name="sorting-rbtn")
+			//- 		label(for="name-rbtn")
+			//- 			|По имени
+			//- 	.input-group
+			//- 		input(type="radio" id='contacts-rbtn' name="sorting-rbtn")
+			//- 		label(for="contacts-rbtn")
+			//- 			|По контактам
+			//- 	.input-group
+			//- 		input(type="radio" id='vacancies-rbtn' name="sorting-rbtn")
+			//- 		label(for="vacancies-rbtn")
+			//- 			|По вакансиям
 		#type-feedback-popup.work-modal-popup
 			form
 				p
