--- a/app/less/main.less
+++ b/app/less/main.less
@@ -825,6 +825,7 @@ i.label {
 
 //////////////////////////
 @import url("app/less/_loader.less");
+@import url("app/less/_progress-bar.less");
 @import url("app/less/_sidebar.less");
 @import url("app/less/_row.less");
 
