--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -463,7 +463,7 @@
       outline: none;
       font-size: 12px;
       cursor: pointer;
-      display: none;
+      // display: none;
       vertical-align: middle!important;
       align-items: center;
       justify-content: center;
