--- a/app/pug/layouts/work-popup/_media.pug
+++ b/app/pug/layouts/work-popup/_media.pug
@@ -1,7 +1,7 @@
 .row.media.modal-row
-	button.show-more
-		span
-			|показать еще
+	//- button.show-more
+	//- 	span
+	//- 		|показать еще
 	//- .modal-row__controls
 	//- 	p
 	//- 		|Медиа
