--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -198,40 +198,40 @@
 
 #modal-2.modal.micromodal-slide(aria-hidden='true')
 	.modal__overlay(tabindex='-1' data-contact-history-close="modal-2")
-		.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
-			span.modal__close(data-contact-history-close="modal-2")
-					span
-					span
-			.contact-history-modal__header
-				.contact-history-modal__block.manager-block
-					p
-						|Менеджер
-					.input-group
-						select.manager-select(name="manager-select")
-				.contact-history-modal__block.direction-block
-					p
-						|Направление
-					.input-group
-						i.ico.change-direction
-							+svg2('arrow')
-				.contact-history-modal__block.date-block
-					p
-						|Дата
-					.input-group
-						input(type="text")
-				.contact-history-modal__block.contact-type-block
-					p
-						|Тип контакта
-					.input-group
-						select.contact-select(name="contact-select")
-			.contact-history-modal__body
-				.contact-history-modal__block
-					p
-						|Содержание
-					.input-group
-						textarea.info-area(type="text" rows="12")
-			button.confirm-btn
-				span
-					|OK
-			button.delete-btn
-				|Удалить
+		.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-2-title')
+			//- span.modal__close(data-contact-history-close="modal-2")
+			//- 		span
+			//- 		span
+			//- .contact-history-modal__header
+			//- 	.contact-history-modal__block.manager-block
+			//- 		p
+			//- 			|Менеджер
+			//- 		.input-group
+			//- 			select.manager-select(name="manager-select")
+			//- 	.contact-history-modal__block.direction-block
+			//- 		p
+			//- 			|Направление
+			//- 		.input-group
+			//- 			i.ico.change-direction
+			//- 				+svg2('arrow')
+			//- 	.contact-history-modal__block.date-block
+			//- 		p
+			//- 			|Дата
+			//- 		.input-group
+			//- 			input(type="text")
+			//- 	.contact-history-modal__block.contact-type-block
+			//- 		p
+			//- 			|Тип контакта
+			//- 		.input-group
+			//- 			select.contact-select(name="contact-select")
+			//- .contact-history-modal__body
+			//- 	.contact-history-modal__block
+			//- 		p
+			//- 			|Содержание
+			//- 		.input-group
+			//- 			textarea.info-area(type="text" rows="12")
+			//- button.confirm-btn
+			//- 	span
+			//- 		|OK
+			//- button.delete-btn
+			//- 	|Удалить
