--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -735,7 +735,7 @@
   }
   .modal-row__layer {
      max-height: 382px;
-     height: 100%;
+     height: auto;
   }
  }
 
@@ -771,6 +771,12 @@
 
     .tag {
       margin-right: 8px;
+    }
+
+    .ico {
+      &.rotate {
+        transform: rotate(180deg);
+      }
     }
  }
 
