--- a/app/less/main.less
+++ b/app/less/main.less
@@ -794,6 +794,7 @@ i.label {
   svg {
     width: 16px;
     height: 16px;
+    margin-top: 0;
   }
   cursor: pointer;
   transition: transform 0.25s linear;
