--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -197,8 +197,8 @@
 
 
 #modal-2.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1' data-contact-history-close="modal-2")
-		.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-2-title')
+	//- .modal__overlay(tabindex='-1' data-contact-history-close="modal-2")
+	//- 	.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-2-title')
 			//- span.modal__close(data-contact-history-close="modal-2")
 			//- 		span
 			//- 		span
