--- a/app/less/_loader.less
+++ b/app/less/_loader.less
@@ -13,13 +13,13 @@
   }
 }
 
-.manufactury-type, .contacts-history, .vacancies-history, .media{
+.manufactury-type, .contacts-history, .vacancies-history, .media, .feedback-employer{
   .lds-ring {
       width: 40px;
       height: 40px;
     }
 
-    .lds-ring div {
+  .lds-ring div {
     box-sizing: border-box;
     display: block;
     position: absolute;
@@ -32,6 +32,7 @@
     border-color: @main-color transparent transparent transparent;
   }
 }
+
 .lds-ring div {
   box-sizing: border-box;
   display: block;
