--- a/app/pug/layouts/work-popup/_feedback.pug
+++ b/app/pug/layouts/work-popup/_feedback.pug
@@ -1,155 +1,156 @@
-.row.feedback.modal-row
-	button.show-more
-		span
-			|показать все
-	.modal-row__controls
-		p
-			|Отзывы - 
-			span
-				| 4 
-			span
-				|(
-			span.negative
-				|негативных - 2
-			span
-				|)
-		.add-item
-			span
-				|+ 
-			|добавить отзыв
-	.modal-row__layer.feedback-row__layer
-		form.modal-row__feedback-row.add-feedback-form
-			.modal-row__feedback-speakers
-				i.modal-row__feedback-ico
-					+svg2('pos-feedback-white')
-				a.modal-row__feedback-choise
-					span
-						|Выбрать
-				i.modal-row__feedback-direction.change-direction
-					+svg2('arrow-white')
-				p.modal-row__feedback-to
-					|Thompson Equestrian Partners
-			.modal-row__feedback-date
-				input(type="text")
-			.modal-row__feedback-text
-				textarea(name="" rows="3" placeholder="введите текст отзыва")
-			.modal-row__feedback-controls
-				.modal-row__feedback-controls_left
-					button.modal-row__feedback-cancel.feedback-btn
-						span
-							|Отменить
-					button.modal-row__feedback-save.feedback-btn
-						span
-							|Сохранить
-				.modal-row__feedback-controls_right
-					button.modal-row__feedback-delete.delete-btn
-						|Удалить
-		.modal-row__feedback-row
-			.modal-row__feedback-speakers
-				i.modal-row__feedback-ico
-					+svg2('pos-feedback')
-				p.modal-row__feedback-from
-					|УАМФ
-				i.modal-row__feedback-direction
-					+svg2('arrow')
-				p.modal-row__feedback-to
-					|Thompson Equestrian Partners
-			.modal-row__feedback-date
-				time
-					|22.08.2019
-				button.modal-row__feedback-edit.edit-btn
-					|Редактировать
-			.modal-row__feedback-text
-				p
-					|Работодатель очень хорошо говорит по английски, чёткий, по документам знает всю прецедуру. Сам составит текст контрактов и вышлет подписанные документы на почту
-		.modal-row__feedback-row
-			.modal-row__feedback-speakers
-				i.modal-row__feedback-ico
-					+svg2('inf-feedback')
-				p.modal-row__feedback-from
-					|Романов Олександр
-				i.modal-row__feedback-direction
-					+svg2('arrow')
-				p.modal-row__feedback-to
-					|Thompson Equestrian Partners
-			.modal-row__feedback-date
-				time
-					|15.07.2019
-				button.modal-row__feedback-edit.edit-btn
-					|Редактировать
-			.modal-row__feedback-text
-				p
-					|Клиент проходил собеседование по скайпу. В ходе разговора выяснил, что с собой на предприятие нужно брать постель и зимнюю одежду. Рабочую одежду всю выдаёт работодатель. Выходные будут один день в 7 дней, можно выбирать день самостоятельно. Так-же раз в пол года можно брать неделю отпуска
-		.modal-row__feedback-row
-			.modal-row__feedback-speakers
-				i.modal-row__feedback-ico
-					+svg2('neg-feedback')
-				p.modal-row__feedback-from
-					|Шащук Іван
-				i.modal-row__feedback-direction
-					+svg2('arrow')
-				p.modal-row__feedback-to
-					|Thompson Equestrian Partners
-			.modal-row__feedback-date
-				time
-					|09.10.2018
-				button.modal-row__feedback-edit.edit-btn
-					|Редактировать
-			.modal-row__feedback-text
-				p
-					|Проработал у работодателя 2 месяца, зарплату задержал, дал только аванс, сказал что рассчитается в следующим месяце. Очень строгий, придалбуется по любому поводу.
-		.modal-row__feedback-row
-			.modal-row__feedback-speakers
-				i.modal-row__feedback-ico
-					+svg2('neg-feedback')
-				p.modal-row__feedback-from
-					|Thompson Equestrian Partners
-				i.modal-row__feedback-direction
-					+svg2('arrow')
-				p.modal-row__feedback-to
-					|Шевчук Ярослав
-			.modal-row__feedback-date
-				time
-					|03.04.2018
-				button.modal-row__feedback-edit.edit-btn
-					|Редактировать
-			.modal-row__feedback-text
-				p
-					|Очень медленно работает. Не остаётся после работы доделать недоделанную работу
-		.modal-row__feedback-row.hidden-row
-			.modal-row__feedback-speakers
-				i.modal-row__feedback-ico
-					+svg2('neg-feedback')
-				p.modal-row__feedback-from
-					|Thompson Equestrian Partners
-				i.modal-row__feedback-direction
-					+svg2('arrow')
-				p.modal-row__feedback-to
-					|Шевчук Ярослав
-			.modal-row__feedback-date
-				time
-					|03.04.2018
-				button.modal-row__feedback-edit.edit-btn
-					|Редактировать
-			.modal-row__feedback-text
-				p
-					|Очень медленно работает. Не остаётся после работы доделать недоделанную работу
-		.modal-row__feedback-row.hidden-row
-				.modal-row__feedback-speakers
-					i.modal-row__feedback-ico
-						+svg2('neg-feedback')
-					p.modal-row__feedback-from
-						|Thompson Equestrian Partners
-					i.modal-row__feedback-direction
-						+svg2('arrow')
-					p.modal-row__feedback-to
-						|Шевчук Ярослав
-				.modal-row__feedback-date
-					time
-						|03.04.2018
-					button.modal-row__feedback-edit.edit-btn
-						|Редактировать
-				.modal-row__feedback-text
-					p
-						|Очень медленно работает. Не остаётся после работы доделать недоделанную работу
+.row.feedback-employer.feedback.modal-row
+	//- button.show-more
+	//- 	span
+	//- 		|показать все
+	//- .modal-row__controls
+	//- 	p
+	//- 		|Отзывы - 
+	//- 		span
+	//- 			| 4 
+	//- 		span
+	//- 			|(
+	//- 		span.negative
+	//- 			|негативных - 2
+	//- 		span
+	//- 			|)
+	//- 	.add-item
+	//- 		span
+	//- 			|+ 
+	//- 		|добавить отзыв
+	//- .modal-row__layer.feedback-row__layer
+	//- 	.modal-row__feedback-wrapper.modal-row__wrapper
+	//- 		form.modal-row__feedback-row.add-feedback-form
+	//- 			.modal-row__feedback-speakers
+	//- 				i.modal-row__feedback-ico
+	//- 					+svg2('pos-feedback-white')
+	//- 				a.modal-row__feedback-choise
+	//- 					span
+	//- 						|Выбрать
+	//- 				i.modal-row__feedback-direction.change-direction
+	//- 					+svg2('arrow-white')
+	//- 				p.modal-row__feedback-to
+	//- 					|Thompson Equestrian Partners
+	//- 			.modal-row__feedback-date
+	//- 				input(type="text")
+	//- 			.modal-row__feedback-text
+	//- 				textarea(name="" rows="3" placeholder="введите текст отзыва")
+	//- 			.modal-row__feedback-controls
+	//- 				.modal-row__feedback-controls_left
+	//- 					button.modal-row__feedback-cancel.feedback-btn
+	//- 						span
+	//- 							|Отменить
+	//- 					button.modal-row__feedback-save.feedback-btn
+	//- 						span
+	//- 							|Сохранить
+	//- 				.modal-row__feedback-controls_right
+	//- 					button.modal-row__feedback-delete.delete-btn
+	//- 						|Удалить
+	//- 		.modal-row__feedback-row
+	//- 			.modal-row__feedback-speakers
+	//- 				i.modal-row__feedback-ico
+	//- 					+svg2('pos-feedback')
+	//- 				p.modal-row__feedback-from
+	//- 					|УАМФ
+	//- 				i.modal-row__feedback-direction
+	//- 					+svg2('arrow')
+	//- 				p.modal-row__feedback-to
+	//- 					|Thompson Equestrian Partners
+	//- 			.modal-row__feedback-date
+	//- 				time
+	//- 					|22.08.2019
+	//- 				button.modal-row__feedback-edit.edit-btn
+	//- 					|Редактировать
+	//- 			.modal-row__feedback-text
+	//- 				p
+	//- 					|Работодатель очень хорошо говорит по английски, чёткий, по документам знает всю прецедуру. Сам составит текст контрактов и вышлет подписанные документы на почту
+	//- 		.modal-row__feedback-row
+	//- 			.modal-row__feedback-speakers
+	//- 				i.modal-row__feedback-ico
+	//- 					+svg2('inf-feedback')
+	//- 				p.modal-row__feedback-from
+	//- 					|Романов Олександр
+	//- 				i.modal-row__feedback-direction
+	//- 					+svg2('arrow')
+	//- 				p.modal-row__feedback-to
+	//- 					|Thompson Equestrian Partners
+	//- 			.modal-row__feedback-date
+	//- 				time
+	//- 					|15.07.2019
+	//- 				button.modal-row__feedback-edit.edit-btn
+	//- 					|Редактировать
+	//- 			.modal-row__feedback-text
+	//- 				p
+	//- 					|Клиент проходил собеседование по скайпу. В ходе разговора выяснил, что с собой на предприятие нужно брать постель и зимнюю одежду. Рабочую одежду всю выдаёт работодатель. Выходные будут один день в 7 дней, можно выбирать день самостоятельно. Так-же раз в пол года можно брать неделю отпуска
+	//- 		.modal-row__feedback-row
+	//- 			.modal-row__feedback-speakers
+	//- 				i.modal-row__feedback-ico
+	//- 					+svg2('neg-feedback')
+	//- 				p.modal-row__feedback-from
+	//- 					|Шащук Іван
+	//- 				i.modal-row__feedback-direction
+	//- 					+svg2('arrow')
+	//- 				p.modal-row__feedback-to
+	//- 					|Thompson Equestrian Partners
+	//- 			.modal-row__feedback-date
+	//- 				time
+	//- 					|09.10.2018
+	//- 				button.modal-row__feedback-edit.edit-btn
+	//- 					|Редактировать
+	//- 			.modal-row__feedback-text
+	//- 				p
+	//- 					|Проработал у работодателя 2 месяца, зарплату задержал, дал только аванс, сказал что рассчитается в следующим месяце. Очень строгий, придалбуется по любому поводу.
+	//- 		.modal-row__feedback-row
+	//- 			.modal-row__feedback-speakers
+	//- 				i.modal-row__feedback-ico
+	//- 					+svg2('neg-feedback')
+	//- 				p.modal-row__feedback-from
+	//- 					|Thompson Equestrian Partners
+	//- 				i.modal-row__feedback-direction
+	//- 					+svg2('arrow')
+	//- 				p.modal-row__feedback-to
+	//- 					|Шевчук Ярослав
+	//- 			.modal-row__feedback-date
+	//- 				time
+	//- 					|03.04.2018
+	//- 				button.modal-row__feedback-edit.edit-btn
+	//- 					|Редактировать
+	//- 			.modal-row__feedback-text
+	//- 				p
+	//- 					|Очень медленно работает. Не остаётся после работы доделать недоделанную работу
+	//- 		.modal-row__feedback-row.hidden-row
+	//- 			.modal-row__feedback-speakers
+	//- 				i.modal-row__feedback-ico
+	//- 					+svg2('neg-feedback')
+	//- 				p.modal-row__feedback-from
+	//- 					|Thompson Equestrian Partners
+	//- 				i.modal-row__feedback-direction
+	//- 					+svg2('arrow')
+	//- 				p.modal-row__feedback-to
+	//- 					|Шевчук Ярослав
+	//- 			.modal-row__feedback-date
+	//- 				time
+	//- 					|03.04.2018
+	//- 				button.modal-row__feedback-edit.edit-btn
+	//- 					|Редактировать
+	//- 			.modal-row__feedback-text
+	//- 				p
+	//- 					|Очень медленно работает. Не остаётся после работы доделать недоделанную работу
+	//- 		.modal-row__feedback-row.hidden-row
+	//- 				.modal-row__feedback-speakers
+	//- 					i.modal-row__feedback-ico
+	//- 						+svg2('neg-feedback')
+	//- 					p.modal-row__feedback-from
+	//- 						|Thompson Equestrian Partners
+	//- 					i.modal-row__feedback-direction
+	//- 						+svg2('arrow')
+	//- 					p.modal-row__feedback-to
+	//- 						|Шевчук Ярослав
+	//- 				.modal-row__feedback-date
+	//- 					time
+	//- 						|03.04.2018
+	//- 					button.modal-row__feedback-edit.edit-btn
+	//- 						|Редактировать
+	//- 				.modal-row__feedback-text
+	//- 					p
+	//- 						|Очень медленно работает. Не остаётся после работы доделать недоделанную работу
 
