--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -1098,10 +1098,9 @@
       }
     }
    }
-    // .modal-row__feedback-direction {
-    //   transform: rotate(180deg);
-  
-    // }
+    .modal-row__feedback-direction.rotate {
+      transform: rotate(180deg);
+    }
 
    .add-feedback-form, .edit-feedback-form {
     // display: none; 
@@ -1195,7 +1194,7 @@
      }
 
 
-     .modal-row__feedback-direction {
+     .modal-row__feedback-direction, .modal-row__feedback-direction-edit {
         background: @main-color;
         border-radius: 50%;
         height: 22px;
