--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -137,6 +137,8 @@
         text-align: left;
         padding: 3px 6px 2px;
         margin-left: 24px;
+        max-width: 100%;
+        width: auto;
     }
 
     // [for="client-feedback-rbtn"] {
