--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -33,7 +33,7 @@ block content
 		
 		.sidebar.vacancy-sidebar
 			include pug/layouts/vacancy/sidebar
-		.rows-wrapper
+		.rows-wrapper.vacancy-rows-wrapper
 			.rows.vacancy-rows
 				.grid
 					//- .side-column
@@ -43,14 +43,14 @@ block content
 						.grid-column.third-column
 						.grid-column.fourth-column
 						.grid-column.fifth-column
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/row
-				include pug/layouts/vacancy/archive-row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/row
+				//- include pug/layouts/vacancy/archive-row
 		//- include pug/layouts/vacancy/_popup
 	include pug/layouts/vacancy/_popup
 			//- include pug/layouts/header
