--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -1,6 +1,6 @@
 .popup
 	.popup__layer
-		#country-popup.sidebar-popup
+		#country-popup-vacancy.sidebar-popup
 			//- form
 			//- 	.input-group
 			//- 		input(type="checkbox" id="AT-chbx")
@@ -54,81 +54,81 @@
 					label(for="busy-chbx")
 						|Трудоустроены
 		#selecting-popup.sidebar-popup
-			form
-				.input-group
-					input(type="radio" id="date-start-rbtn" name="selecting-rbtn")
-					label(for="date-start-rbtn")
-						|По дате начала работы
-				.input-group
-					input(type="radio" id='countries-rbtn' name="selecting-rbtn")
-					label(for="countries-rbtn")
-						|По странам
-				.input-group
-					input(type="radio" id='managers-rbtn' name="selecting-rbtn")
-					label(for="managers-rbtn")
-						|По менеджерам
+			//- form
+			//- 	.input-group
+			//- 		input(type="radio" id="date-start-rbtn" name="selecting-rbtn")
+			//- 		label(for="date-start-rbtn")
+			//- 			|По дате начала работы
+			//- 	.input-group
+			//- 		input(type="radio" id='countries-rbtn' name="selecting-rbtn")
+			//- 		label(for="countries-rbtn")
+			//- 			|По странам
+			//- 	.input-group
+			//- 		input(type="radio" id='managers-rbtn' name="selecting-rbtn")
+			//- 		label(for="managers-rbtn")
+			//- 			|По менеджерам
 		#type-work-popup.sidebar-popup
 			form
-				.form-group
-					fieldset
-						p
-							|Тип работы
-						.input-group.radio-group-type-2.hot
-							.group
-								input(type="checkbox" id="season-chbx" name="vacancies-chbx" checked="true")
-								label(for="season-chbx")
-									|Сезонная
-								input(type="checkbox" id="practice-chbx" name="vacancies-chbx")
-								label(for="practice-chbx")
-									|Практика
-								input(type="checkbox" id="work-chbx" name="vacancies-chbx")
-								label(for="work-chbx")
-									|Рабочая
-				.form-group
-					fieldset
-						p
-							|Тип производства
-						.input-group
-							input(type="checkbox" id="flowers-chbx")
-							label(for="flowers-chbx")
-								|цветы
-						.input-group
-							input(type="checkbox" id="vegetables-chbx")
-							label(for="vegetables-chbx")
-								|овощи
-						.input-group
-							input(type="checkbox" id="cows-chbx")
-							label(for="cows-chbx")
-								|коровы
-						.input-group
-							input(type="checkbox" id="pigs-chbx")
-							label(for="pigs-chbx")
-								|свиньи
-						.input-group
-							input(type="checkbox" id="fields-chbx")
-							label(for="fields-chbx")
-								|поля
-					fieldset
-						.input-group
-							input(type="checkbox" id="berries-chbx")
-							label(for="berries-chbx")
-								|ягоды
-						.input-group
-							input(type="checkbox" id="greenhouses-chbx")
-							label(for="greenhouses-chbx")
-								|теплицы
-						.input-group
-							input(type="checkbox" id="wood-chbx")
-							label(for="wood-chbx")
-								|лес
-						.input-group
-							input(type="checkbox" id="landscape-chbx")
-							label(for="landscape-chbx")
-								|ландшафт
-						.input-group
-							input(type="checkbox" id="horses-chbx")
-							label(for="horses-chbx")
-								|лошади
+				//- .form-group
+				//- 	fieldset
+				//- 		p
+				//- 			|Тип работы
+				//- 		.input-group.radio-group-type-2.hot
+				//- 			.group
+				//- 				input(type="checkbox" id="season-chbx" name="vacancies-chbx" checked="true")
+				//- 				label(for="season-chbx")
+				//- 					|Сезонная
+				//- 				input(type="checkbox" id="practice-chbx" name="vacancies-chbx")
+				//- 				label(for="practice-chbx")
+				//- 					|Практика
+				//- 				input(type="checkbox" id="work-chbx" name="vacancies-chbx")
+				//- 				label(for="work-chbx")
+				//- 					|Рабочая
+				//- .form-group
+				//- 	fieldset
+				//- 		p
+				//- 			|Тип производства
+				//- 		.input-group
+				//- 			input(type="checkbox" id="flowers-chbx")
+				//- 			label(for="flowers-chbx")
+				//- 				|цветы
+				//- 		.input-group
+				//- 			input(type="checkbox" id="vegetables-chbx")
+				//- 			label(for="vegetables-chbx")
+				//- 				|овощи
+				//- 		.input-group
+				//- 			input(type="checkbox" id="cows-chbx")
+				//- 			label(for="cows-chbx")
+				//- 				|коровы
+				//- 		.input-group
+				//- 			input(type="checkbox" id="pigs-chbx")
+				//- 			label(for="pigs-chbx")
+				//- 				|свиньи
+				//- 		.input-group
+				//- 			input(type="checkbox" id="fields-chbx")
+				//- 			label(for="fields-chbx")
+				//- 				|поля
+				//- 	fieldset
+				//- 		.input-group
+				//- 			input(type="checkbox" id="berries-chbx")
+				//- 			label(for="berries-chbx")
+				//- 				|ягоды
+				//- 		.input-group
+				//- 			input(type="checkbox" id="greenhouses-chbx")
+				//- 			label(for="greenhouses-chbx")
+				//- 				|теплицы
+				//- 		.input-group
+				//- 			input(type="checkbox" id="wood-chbx")
+				//- 			label(for="wood-chbx")
+				//- 				|лес
+				//- 		.input-group
+				//- 			input(type="checkbox" id="landscape-chbx")
+				//- 			label(for="landscape-chbx")
+				//- 				|ландшафт
+				//- 		.input-group
+				//- 			input(type="checkbox" id="horses-chbx")
+				//- 			label(for="horses-chbx")
+				//- 				|лошади
 		#date-terms-popup.sidebar-popup
 			form
 				fieldset
