--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -345,6 +345,7 @@
     resize: none;
     overflow: hidden;
     transition: background 0.2s linear;
+    min-height: 71px;
 
     &:focus {
       background: @white;
