--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,5 +1,6 @@
 @import url("app/less/_var.less");
 @import url("app/less/_mixins.less");
+@import url("app/less/_init-sprites.less");
 
 html {
   font-size: 14px;
