--- a/app/less/sprite.less
+++ b/app/less/sprite.less
@@ -11,55 +11,363 @@ The large array-like variables contain all information about a single icon
 At the bottom of this section, we provide information about the spritesheet itself
 @spritesheet: width height image @spritesheet-sprites;
 */
-@s-icon1-name: 's-icon1';
-@s-icon1-x: 0px;
-@s-icon1-y: 0px;
-@s-icon1-offset-x: 0px;
-@s-icon1-offset-y: 0px;
-@s-icon1-width: 40px;
-@s-icon1-height: 40px;
-@s-icon1-total-width: 80px;
-@s-icon1-total-height: 80px;
-@s-icon1-image: 'sprite.png';
-@s-icon1: 0px 0px 0px 0px 40px 40px 80px 80px 'sprite.png' 's-icon1';
-@s-icon2-name: 's-icon2';
-@s-icon2-x: 40px;
-@s-icon2-y: 0px;
-@s-icon2-offset-x: -40px;
-@s-icon2-offset-y: 0px;
-@s-icon2-width: 40px;
-@s-icon2-height: 40px;
-@s-icon2-total-width: 80px;
-@s-icon2-total-height: 80px;
-@s-icon2-image: 'sprite.png';
-@s-icon2: 40px 0px -40px 0px 40px 40px 80px 80px 'sprite.png' 's-icon2';
-@s-icon3-name: 's-icon3';
-@s-icon3-x: 0px;
-@s-icon3-y: 40px;
-@s-icon3-offset-x: 0px;
-@s-icon3-offset-y: -40px;
-@s-icon3-width: 40px;
-@s-icon3-height: 40px;
-@s-icon3-total-width: 80px;
-@s-icon3-total-height: 80px;
-@s-icon3-image: 'sprite.png';
-@s-icon3: 0px 40px 0px -40px 40px 40px 80px 80px 'sprite.png' 's-icon3';
-@s-icon4-name: 's-icon4';
-@s-icon4-x: 40px;
-@s-icon4-y: 40px;
-@s-icon4-offset-x: -40px;
-@s-icon4-offset-y: -40px;
-@s-icon4-width: 40px;
-@s-icon4-height: 40px;
-@s-icon4-total-width: 80px;
-@s-icon4-total-height: 80px;
-@s-icon4-image: 'sprite.png';
-@s-icon4: 40px 40px -40px -40px 40px 40px 80px 80px 'sprite.png' 's-icon4';
-@spritesheet-width: 80px;
-@spritesheet-height: 80px;
+@s-anket-name: 's-anket';
+@s-anket-x: 125px;
+@s-anket-y: 40px;
+@s-anket-offset-x: -125px;
+@s-anket-offset-y: -40px;
+@s-anket-width: 16px;
+@s-anket-height: 20px;
+@s-anket-total-width: 145px;
+@s-anket-total-height: 114px;
+@s-anket-image: 'sprite.png';
+@s-anket: 125px 40px -125px -40px 16px 20px 145px 114px 'sprite.png' 's-anket';
+@s-at-name: 's-at';
+@s-at-x: 0px;
+@s-at-y: 0px;
+@s-at-offset-x: 0px;
+@s-at-offset-y: 0px;
+@s-at-width: 25px;
+@s-at-height: 19px;
+@s-at-total-width: 145px;
+@s-at-total-height: 114px;
+@s-at-image: 'sprite.png';
+@s-at: 0px 0px 0px 0px 25px 19px 145px 114px 'sprite.png' 's-at';
+@s-attention-name: 's-attention';
+@s-attention-x: 25px;
+@s-attention-y: 95px;
+@s-attention-offset-x: -25px;
+@s-attention-offset-y: -95px;
+@s-attention-width: 21px;
+@s-attention-height: 19px;
+@s-attention-total-width: 145px;
+@s-attention-total-height: 114px;
+@s-attention-image: 'sprite.png';
+@s-attention: 25px 95px -25px -95px 21px 19px 145px 114px 'sprite.png' 's-attention';
+@s-au-name: 's-au';
+@s-au-x: 25px;
+@s-au-y: 0px;
+@s-au-offset-x: -25px;
+@s-au-offset-y: 0px;
+@s-au-width: 25px;
+@s-au-height: 19px;
+@s-au-total-width: 145px;
+@s-au-total-height: 114px;
+@s-au-image: 'sprite.png';
+@s-au: 25px 0px -25px 0px 25px 19px 145px 114px 'sprite.png' 's-au';
+@s-be-name: 's-be';
+@s-be-x: 0px;
+@s-be-y: 19px;
+@s-be-offset-x: 0px;
+@s-be-offset-y: -19px;
+@s-be-width: 25px;
+@s-be-height: 19px;
+@s-be-total-width: 145px;
+@s-be-total-height: 114px;
+@s-be-image: 'sprite.png';
+@s-be: 0px 19px 0px -19px 25px 19px 145px 114px 'sprite.png' 's-be';
+@s-ca-name: 's-ca';
+@s-ca-x: 25px;
+@s-ca-y: 19px;
+@s-ca-offset-x: -25px;
+@s-ca-offset-y: -19px;
+@s-ca-width: 25px;
+@s-ca-height: 19px;
+@s-ca-total-width: 145px;
+@s-ca-total-height: 114px;
+@s-ca-image: 'sprite.png';
+@s-ca: 25px 19px -25px -19px 25px 19px 145px 114px 'sprite.png' 's-ca';
+@s-ch-name: 's-ch';
+@s-ch-x: 50px;
+@s-ch-y: 0px;
+@s-ch-offset-x: -50px;
+@s-ch-offset-y: 0px;
+@s-ch-width: 25px;
+@s-ch-height: 19px;
+@s-ch-total-width: 145px;
+@s-ch-total-height: 114px;
+@s-ch-image: 'sprite.png';
+@s-ch: 50px 0px -50px 0px 25px 19px 145px 114px 'sprite.png' 's-ch';
+@s-cy-name: 's-cy';
+@s-cy-x: 50px;
+@s-cy-y: 19px;
+@s-cy-offset-x: -50px;
+@s-cy-offset-y: -19px;
+@s-cy-width: 25px;
+@s-cy-height: 19px;
+@s-cy-total-width: 145px;
+@s-cy-total-height: 114px;
+@s-cy-image: 'sprite.png';
+@s-cy: 50px 19px -50px -19px 25px 19px 145px 114px 'sprite.png' 's-cy';
+@s-cz-name: 's-cz';
+@s-cz-x: 0px;
+@s-cz-y: 38px;
+@s-cz-offset-x: 0px;
+@s-cz-offset-y: -38px;
+@s-cz-width: 25px;
+@s-cz-height: 19px;
+@s-cz-total-width: 145px;
+@s-cz-total-height: 114px;
+@s-cz-image: 'sprite.png';
+@s-cz: 0px 38px 0px -38px 25px 19px 145px 114px 'sprite.png' 's-cz';
+@s-de-name: 's-de';
+@s-de-x: 25px;
+@s-de-y: 38px;
+@s-de-offset-x: -25px;
+@s-de-offset-y: -38px;
+@s-de-width: 25px;
+@s-de-height: 19px;
+@s-de-total-width: 145px;
+@s-de-total-height: 114px;
+@s-de-image: 'sprite.png';
+@s-de: 25px 38px -25px -38px 25px 19px 145px 114px 'sprite.png' 's-de';
+@s-dk-name: 's-dk';
+@s-dk-x: 50px;
+@s-dk-y: 38px;
+@s-dk-offset-x: -50px;
+@s-dk-offset-y: -38px;
+@s-dk-width: 25px;
+@s-dk-height: 19px;
+@s-dk-total-width: 145px;
+@s-dk-total-height: 114px;
+@s-dk-image: 'sprite.png';
+@s-dk: 50px 38px -50px -38px 25px 19px 145px 114px 'sprite.png' 's-dk';
+@s-documents-name: 's-documents';
+@s-documents-x: 125px;
+@s-documents-y: 20px;
+@s-documents-offset-x: -125px;
+@s-documents-offset-y: -20px;
+@s-documents-width: 18px;
+@s-documents-height: 20px;
+@s-documents-total-width: 145px;
+@s-documents-total-height: 114px;
+@s-documents-image: 'sprite.png';
+@s-documents: 125px 20px -125px -20px 18px 20px 145px 114px 'sprite.png' 's-documents';
+@s-es-name: 's-es';
+@s-es-x: 75px;
+@s-es-y: 0px;
+@s-es-offset-x: -75px;
+@s-es-offset-y: 0px;
+@s-es-width: 25px;
+@s-es-height: 19px;
+@s-es-total-width: 145px;
+@s-es-total-height: 114px;
+@s-es-image: 'sprite.png';
+@s-es: 75px 0px -75px 0px 25px 19px 145px 114px 'sprite.png' 's-es';
+@s-fi-name: 's-fi';
+@s-fi-x: 75px;
+@s-fi-y: 19px;
+@s-fi-offset-x: -75px;
+@s-fi-offset-y: -19px;
+@s-fi-width: 25px;
+@s-fi-height: 19px;
+@s-fi-total-width: 145px;
+@s-fi-total-height: 114px;
+@s-fi-image: 'sprite.png';
+@s-fi: 75px 19px -75px -19px 25px 19px 145px 114px 'sprite.png' 's-fi';
+@s-fr-name: 's-fr';
+@s-fr-x: 75px;
+@s-fr-y: 38px;
+@s-fr-offset-x: -75px;
+@s-fr-offset-y: -38px;
+@s-fr-width: 25px;
+@s-fr-height: 19px;
+@s-fr-total-width: 145px;
+@s-fr-total-height: 114px;
+@s-fr-image: 'sprite.png';
+@s-fr: 75px 38px -75px -38px 25px 19px 145px 114px 'sprite.png' 's-fr';
+@s-gb-name: 's-gb';
+@s-gb-x: 0px;
+@s-gb-y: 57px;
+@s-gb-offset-x: 0px;
+@s-gb-offset-y: -57px;
+@s-gb-width: 25px;
+@s-gb-height: 19px;
+@s-gb-total-width: 145px;
+@s-gb-total-height: 114px;
+@s-gb-image: 'sprite.png';
+@s-gb: 0px 57px 0px -57px 25px 19px 145px 114px 'sprite.png' 's-gb';
+@s-gr-name: 's-gr';
+@s-gr-x: 25px;
+@s-gr-y: 57px;
+@s-gr-offset-x: -25px;
+@s-gr-offset-y: -57px;
+@s-gr-width: 25px;
+@s-gr-height: 19px;
+@s-gr-total-width: 145px;
+@s-gr-total-height: 114px;
+@s-gr-image: 'sprite.png';
+@s-gr: 25px 57px -25px -57px 25px 19px 145px 114px 'sprite.png' 's-gr';
+@s-hu-name: 's-hu';
+@s-hu-x: 50px;
+@s-hu-y: 57px;
+@s-hu-offset-x: -50px;
+@s-hu-offset-y: -57px;
+@s-hu-width: 25px;
+@s-hu-height: 19px;
+@s-hu-total-width: 145px;
+@s-hu-total-height: 114px;
+@s-hu-image: 'sprite.png';
+@s-hu: 50px 57px -50px -57px 25px 19px 145px 114px 'sprite.png' 's-hu';
+@s-il-name: 's-il';
+@s-il-x: 75px;
+@s-il-y: 57px;
+@s-il-offset-x: -75px;
+@s-il-offset-y: -57px;
+@s-il-width: 25px;
+@s-il-height: 19px;
+@s-il-total-width: 145px;
+@s-il-total-height: 114px;
+@s-il-image: 'sprite.png';
+@s-il: 75px 57px -75px -57px 25px 19px 145px 114px 'sprite.png' 's-il';
+@s-is-name: 's-is';
+@s-is-x: 0px;
+@s-is-y: 76px;
+@s-is-offset-x: 0px;
+@s-is-offset-y: -76px;
+@s-is-width: 25px;
+@s-is-height: 19px;
+@s-is-total-width: 145px;
+@s-is-total-height: 114px;
+@s-is-image: 'sprite.png';
+@s-is: 0px 76px 0px -76px 25px 19px 145px 114px 'sprite.png' 's-is';
+@s-lv-name: 's-lv';
+@s-lv-x: 25px;
+@s-lv-y: 76px;
+@s-lv-offset-x: -25px;
+@s-lv-offset-y: -76px;
+@s-lv-width: 25px;
+@s-lv-height: 19px;
+@s-lv-total-width: 145px;
+@s-lv-total-height: 114px;
+@s-lv-image: 'sprite.png';
+@s-lv: 25px 76px -25px -76px 25px 19px 145px 114px 'sprite.png' 's-lv';
+@s-nl-name: 's-nl';
+@s-nl-x: 50px;
+@s-nl-y: 76px;
+@s-nl-offset-x: -50px;
+@s-nl-offset-y: -76px;
+@s-nl-width: 25px;
+@s-nl-height: 19px;
+@s-nl-total-width: 145px;
+@s-nl-total-height: 114px;
+@s-nl-image: 'sprite.png';
+@s-nl: 50px 76px -50px -76px 25px 19px 145px 114px 'sprite.png' 's-nl';
+@s-no-name: 's-no';
+@s-no-x: 75px;
+@s-no-y: 76px;
+@s-no-offset-x: -75px;
+@s-no-offset-y: -76px;
+@s-no-width: 25px;
+@s-no-height: 19px;
+@s-no-total-width: 145px;
+@s-no-total-height: 114px;
+@s-no-image: 'sprite.png';
+@s-no: 75px 76px -75px -76px 25px 19px 145px 114px 'sprite.png' 's-no';
+@s-nz-name: 's-nz';
+@s-nz-x: 100px;
+@s-nz-y: 0px;
+@s-nz-offset-x: -100px;
+@s-nz-offset-y: 0px;
+@s-nz-width: 25px;
+@s-nz-height: 19px;
+@s-nz-total-width: 145px;
+@s-nz-total-height: 114px;
+@s-nz-image: 'sprite.png';
+@s-nz: 100px 0px -100px 0px 25px 19px 145px 114px 'sprite.png' 's-nz';
+@s-phone-red-name: 's-phone-red';
+@s-phone-red-x: 125px;
+@s-phone-red-y: 0px;
+@s-phone-red-offset-x: -125px;
+@s-phone-red-offset-y: 0px;
+@s-phone-red-width: 20px;
+@s-phone-red-height: 20px;
+@s-phone-red-total-width: 145px;
+@s-phone-red-total-height: 114px;
+@s-phone-red-image: 'sprite.png';
+@s-phone-red: 125px 0px -125px 0px 20px 20px 145px 114px 'sprite.png' 's-phone-red';
+@s-phone-name: 's-phone';
+@s-phone-x: 125px;
+@s-phone-y: 60px;
+@s-phone-offset-x: -125px;
+@s-phone-offset-y: -60px;
+@s-phone-width: 16px;
+@s-phone-height: 16px;
+@s-phone-total-width: 145px;
+@s-phone-total-height: 114px;
+@s-phone-image: 'sprite.png';
+@s-phone: 125px 60px -125px -60px 16px 16px 145px 114px 'sprite.png' 's-phone';
+@s-pl-name: 's-pl';
+@s-pl-x: 100px;
+@s-pl-y: 19px;
+@s-pl-offset-x: -100px;
+@s-pl-offset-y: -19px;
+@s-pl-width: 25px;
+@s-pl-height: 19px;
+@s-pl-total-width: 145px;
+@s-pl-total-height: 114px;
+@s-pl-image: 'sprite.png';
+@s-pl: 100px 19px -100px -19px 25px 19px 145px 114px 'sprite.png' 's-pl';
+@s-pt-name: 's-pt';
+@s-pt-x: 100px;
+@s-pt-y: 38px;
+@s-pt-offset-x: -100px;
+@s-pt-offset-y: -38px;
+@s-pt-width: 25px;
+@s-pt-height: 19px;
+@s-pt-total-width: 145px;
+@s-pt-total-height: 114px;
+@s-pt-image: 'sprite.png';
+@s-pt: 100px 38px -100px -38px 25px 19px 145px 114px 'sprite.png' 's-pt';
+@s-se-name: 's-se';
+@s-se-x: 100px;
+@s-se-y: 57px;
+@s-se-offset-x: -100px;
+@s-se-offset-y: -57px;
+@s-se-width: 25px;
+@s-se-height: 19px;
+@s-se-total-width: 145px;
+@s-se-total-height: 114px;
+@s-se-image: 'sprite.png';
+@s-se: 100px 57px -100px -57px 25px 19px 145px 114px 'sprite.png' 's-se';
+@s-star-name: 's-star';
+@s-star-x: 125px;
+@s-star-y: 76px;
+@s-star-offset-x: -125px;
+@s-star-offset-y: -76px;
+@s-star-width: 12px;
+@s-star-height: 13px;
+@s-star-total-width: 145px;
+@s-star-total-height: 114px;
+@s-star-image: 'sprite.png';
+@s-star: 125px 76px -125px -76px 12px 13px 145px 114px 'sprite.png' 's-star';
+@s-ua-name: 's-ua';
+@s-ua-x: 100px;
+@s-ua-y: 76px;
+@s-ua-offset-x: -100px;
+@s-ua-offset-y: -76px;
+@s-ua-width: 25px;
+@s-ua-height: 19px;
+@s-ua-total-width: 145px;
+@s-ua-total-height: 114px;
+@s-ua-image: 'sprite.png';
+@s-ua: 100px 76px -100px -76px 25px 19px 145px 114px 'sprite.png' 's-ua';
+@s-us-name: 's-us';
+@s-us-x: 0px;
+@s-us-y: 95px;
+@s-us-offset-x: 0px;
+@s-us-offset-y: -95px;
+@s-us-width: 25px;
+@s-us-height: 19px;
+@s-us-total-width: 145px;
+@s-us-total-height: 114px;
+@s-us-image: 'sprite.png';
+@s-us: 0px 95px 0px -95px 25px 19px 145px 114px 'sprite.png' 's-us';
+@spritesheet-width: 145px;
+@spritesheet-height: 114px;
 @spritesheet-image: 'sprite.png';
-@spritesheet-sprites: @s-icon1 @s-icon2 @s-icon3 @s-icon4;
-@spritesheet: 80px 80px 'sprite.png' @spritesheet-sprites;
+@spritesheet-sprites: @s-anket @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-es @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-is @s-lv @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pt @s-se @s-star @s-ua @s-us;
+@spritesheet: 145px 114px 'sprite.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
