--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -458,3 +458,15 @@ p.status {
 .cell-status__slider {
 	padding-left: 6px;
 }
+
+.language-stars {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.language__wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
