--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -114,7 +114,7 @@
 			//- 		input(type="radio" id="never-rbtn" name="last-contact-rbtn")
 			//- 		label(for="never-rbtn")
 			//- 			|никогда
-		#managers-popup.sidebar-popup
+		#managers-popup.sidebar-popup.managers-popup-employer
 			//- form
 			//- 	.input-group
 			//- 		input(type="checkbox" id="AK-chbx")
