--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -26,7 +26,7 @@
 			//- 		input(type="checkbox" id='SE-chbx')
 			//- 		label(for="SE-chbx")
 			//- 			|Швеция
-		#managers-popup.sidebar-popup
+		#managers-popup.sidebar-popup.managers-popup-vacancy
 		#status-popup.sidebar-popup
 			form
 				.input-group
