--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -129,8 +129,23 @@
 	// border-right: 1px solid @main-color;
 }
 
+.row__labels-layer {
+	  height: 100%;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    margin-right: 13px;
+    margin-left: 13px;
+    width: 100%;
+    letter-spacing: -.05px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    // overflow-x: auto;
+    overflow: hidden;
+}
+
 .row__flag {
-	width: 26px;
+	width: 25px;
 	height: 19px;
 	margin-right: 7px;
 	svg {
