--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -10,6 +10,7 @@
 						.f-container
 							.sidebar__info
 								form.work-modal__sidebar-employer-form
+									.manager-select-wrap
 									//- .input-group
 									//- 	p
 									//- 		|Менеджер
@@ -27,11 +28,11 @@
 									//- 			+svg2('attention')
 									//- 		textarea(type="text" class="sidebar__task-input" rows="1" data-elastic="true")
 									//- 		span.delete-task-item
-							.sidebar__notes
-								.input-group
-									p
-										|Заметки
-									textarea(rows="5" class="sidebar__area-notes" data-elastic="true")
+							.sidebar__notes.work-modal__sidebar-notes
+								//- .input-group
+								//- 	p
+								//- 		|Заметки
+								//- 	textarea(rows="5" class="sidebar__area-notes" data-elastic="true")
 							.sidebar__actions
 								ul.sidebar__action
 									li.sidebar__action-item
