--- a/app/less/main.less
+++ b/app/less/main.less
@@ -255,6 +255,7 @@ main.main {
   flex-wrap: wrap;
   align-content: flex-start;
   position: relative;
+  width: 100%;
   // align-self: flex-start; 
 
 }
