--- a/app/less/sprite.less
+++ b/app/less/sprite.less
@@ -22,6 +22,28 @@ At the bottom of this section, we provide information about the spritesheet itse
 @s-anket-total-height: 114px;
 @s-anket-image: 'sprite.png';
 @s-anket: 125px 40px -125px -40px 16px 20px 145px 114px 'sprite.png' 's-anket';
+@s-arr-left-name: 's-arr-left';
+@s-arr-left-x: 137px;
+@s-arr-left-y: 76px;
+@s-arr-left-offset-x: -137px;
+@s-arr-left-offset-y: -76px;
+@s-arr-left-width: 6px;
+@s-arr-left-height: 8px;
+@s-arr-left-total-width: 145px;
+@s-arr-left-total-height: 114px;
+@s-arr-left-image: 'sprite.png';
+@s-arr-left: 137px 76px -137px -76px 6px 8px 145px 114px 'sprite.png' 's-arr-left';
+@s-arr-right-name: 's-arr-right';
+@s-arr-right-x: 125px;
+@s-arr-right-y: 89px;
+@s-arr-right-offset-x: -125px;
+@s-arr-right-offset-y: -89px;
+@s-arr-right-width: 6px;
+@s-arr-right-height: 8px;
+@s-arr-right-total-width: 145px;
+@s-arr-right-total-height: 114px;
+@s-arr-right-image: 'sprite.png';
+@s-arr-right: 125px 89px -125px -89px 6px 8px 145px 114px 'sprite.png' 's-arr-right';
 @s-at-name: 's-at';
 @s-at-x: 0px;
 @s-at-y: 0px;
@@ -366,7 +388,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 145px;
 @spritesheet-height: 114px;
 @spritesheet-image: 'sprite.png';
-@spritesheet-sprites: @s-anket @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-es @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-is @s-lv @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pt @s-se @s-star @s-ua @s-us;
+@spritesheet-sprites: @s-anket @s-arr-left @s-arr-right @s-at @s-attention @s-au @s-be @s-ca @s-ch @s-cy @s-cz @s-de @s-dk @s-documents @s-es @s-fi @s-fr @s-gb @s-gr @s-hu @s-il @s-is @s-lv @s-nl @s-no @s-nz @s-phone-red @s-phone @s-pl @s-pt @s-se @s-star @s-ua @s-us;
 @spritesheet: 145px 114px 'sprite.png' @spritesheet-sprites;
 
 /*
