--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -358,6 +358,14 @@ p.status {
 	padding-right: 6px;
 	flex-grow: 1;
 	justify-content: space-between;
+
+	.ico {
+		width: 6px;
+    height: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	}
 }
 
 .cell-status__right {
@@ -395,7 +403,7 @@ p.status {
 	}
 
 	.cell-status__control-left {
-		padding: 4px 7px;
+		padding: 6px 7px;
 		border-right: 0.5px solid @white;
 		padding-right: 4px;
 		background: @grass-green;
@@ -412,7 +420,7 @@ p.status {
 
 
 	.cell-status__control-right {
-		padding: 4px 7px;
+		padding: 6px 7px;
 		padding-left: 4px;
 		background: @grass-green;
 		border-left: 0.5px solid @white;
