--- a/app/pug/layouts/sidebar.pug
+++ b/app/pug/layouts/sidebar.pug
@@ -32,7 +32,7 @@
 						span
 						span
 		.sidebar__filters
-			.sidebar__input-wrapper
+			.sidebar__input-wrapper#employer-search-input-wrapper
 				
 				//- input.sidebar__search-input(type="text" placeholder="поиск")
 				//- i.search-icon
