--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -28,31 +28,31 @@
 			//- 			|Швеция
 		#managers-popup.sidebar-popup.managers-popup-vacancy
 		#status-popup.sidebar-popup
-			form
-				.input-group
-					input(type="checkbox" id="shortfall-chbx")
-					label(for="shortfall-chbx")
-						|Недоборы
-				.input-group
-					input(type="checkbox" id='selected-chbx')
-					label(for="selected-chbx")
-						|Отобраны
-				.input-group
-					input(type="checkbox" id='supply-chbx')
-					label(for="supply-chbx")
-						|Готовятся к подаче
-				.input-group
-					input(type="checkbox" id='wait-chbx')
-					label(for="wait-chbx")
-						|Ждут разрешения
-				.input-group
-					input(type="checkbox" id='department-chbx')
-					label(for="department-chbx")
-						|Готовятся к отъезду
-				.input-group
-					input(type="checkbox" id='busy-chbx')
-					label(for="busy-chbx")
-						|Трудоустроены
+			//- form
+			//- 	.input-group
+			//- 		input(type="checkbox" id="shortfall-chbx")
+			//- 		label(for="shortfall-chbx")
+			//- 			|Недоборы
+			//- 	.input-group
+			//- 		input(type="checkbox" id='selected-chbx')
+			//- 		label(for="selected-chbx")
+			//- 			|Отобраны
+			//- 	.input-group
+			//- 		input(type="checkbox" id='supply-chbx')
+			//- 		label(for="supply-chbx")
+			//- 			|Готовятся к подаче
+			//- 	.input-group
+			//- 		input(type="checkbox" id='wait-chbx')
+			//- 		label(for="wait-chbx")
+			//- 			|Ждут разрешения
+			//- 	.input-group
+			//- 		input(type="checkbox" id='department-chbx')
+			//- 		label(for="department-chbx")
+			//- 			|Готовятся к отъезду
+			//- 	.input-group
+			//- 		input(type="checkbox" id='busy-chbx')
+			//- 		label(for="busy-chbx")
+			//- 			|Трудоустроены
 		#selecting-popup.sidebar-popup
 			//- form
 			//- 	.input-group
