--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -41,7 +41,7 @@
 					label(for="archive-chbx")
 						|Архивные
 		.sidebar__filters
-			.sidebar__input-wrapper
+			.sidebar__input-wrapper#vacancy-search-input-wrapper
 				
 				//- input.sidebar__search-input(type="text" placeholder="поиск")
 				//- i.search-icon
