--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -130,33 +130,33 @@
 				//- 			label(for="horses-chbx")
 				//- 				|лошади
 		#date-terms-popup.sidebar-popup
-			form
-				fieldset
-					p
-						|Дата начала работы
-					.input-group
-						input(type="text" id="before-date-chbx")
-						label(for="before-date-chbx")
-							|до
-					.input-group
-						input(type="text" id="after-date-chbx")
-						label(for="after-date-chbx")
-							|после
-				fieldset
-					p
-						|Срок работы
-					.group
-						.input-group
-							input(type="text" id="from-date-chbx")
-							label(for="from-date-chbx")
-								|от
-						.input-group
-							input(type="text" id="to-date-chbx")
-							label(for="to-date-chbx")
-								|до
-						.input-group
-							p
-								|мес
+			//- form
+			//- 	fieldset
+			//- 		p
+			//- 			|Дата начала работы
+			//- 		.input-group
+			//- 			input(type="text" id="before-date-chbx")
+			//- 			label(for="before-date-chbx")
+			//- 				|до
+			//- 		.input-group
+			//- 			input(type="text" id="after-date-chbx")
+			//- 			label(for="after-date-chbx")
+			//- 				|после
+			//- 	fieldset
+			//- 		p
+			//- 			|Срок работы
+			//- 		.group
+			//- 			.input-group
+			//- 				input(type="text" id="from-date-chbx")
+			//- 				label(for="from-date-chbx")
+			//- 					|от
+			//- 			.input-group
+			//- 				input(type="text" id="to-date-chbx")
+			//- 				label(for="to-date-chbx")
+			//- 					|до
+			//- 			.input-group
+			//- 				p
+			//- 					|мес
 		#employer-type-popup.vacancy-modal-popup
 			form
 				p.vacancy-modal__title
